--- a/packages/chatwidget/src/components/ChatWidget/ChatWidget.css
+++ b/packages/chatwidget/src/components/ChatWidget/ChatWidget.css
@@ -7,7 +7,7 @@
     cursor: pointer;
     background-color: #f4f7f9;
     border-radius: 10px;
-
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 #header {
@@ -57,6 +57,7 @@
     border-width: 1px;
     border-radius: 50px;
     padding: 8px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 #messageBox input {
